--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 *{
     margin: 0;
     padding: 0;
@@ -18,14 +20,14 @@ div.container-carousel{
 }
 
 .carousel-img{
-    display: none;
-    width: 100%;
+    width: 0;
     height: 100%;
     object-fit: cover;
+    transition: all 0.55s;
 }
 
 .title{
-    display: none;
+    width: 0;
     position: absolute;
 
     bottom: 10%;
@@ -34,7 +36,7 @@ div.container-carousel{
 }
 
 .text{
-    display: none;
+    width: 0;
     position: absolute;
 
     bottom: 5%;
@@ -43,7 +45,7 @@ div.container-carousel{
 }
 
 .active {
-    display: block;
+    width: 100%;
 }
 
 i{
